@@ -74,6 +74,8 @@ New Features
 
 * SOLR-16844: Added new parameter `backupConfigset` to collection Backup to optionally skip backing up configsets. (Tomás Fernández Löbbe)
 
+* SOLR-16837: Introducing AffinityPlacementFactory.withCollectionShards to collocate shards for this operation. (Mikhail Khludnev)
+
 Improvements
 ---------------------
 
